; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_mp_watchdog.c_watchdog_ipi_nmi.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_mp_watchdog.c_watchdog_ipi_nmi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@APIC_DEST_DESTFLD = common dso_local global i32 0, align 4
@APIC_TRIGMOD_EDGE = common dso_local global i32 0, align 4
@APIC_LEVEL_ASSERT = common dso_local global i32 0, align 4
@APIC_DESTMODE_PHY = common dso_local global i32 0, align 4
@APIC_DELMODE_NMI = common dso_local global i32 0, align 4
@boot_cpu_id = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @watchdog_ipi_nmi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @watchdog_ipi_nmi() #0 {
  %1 = load i32, i32* @APIC_DEST_DESTFLD, align 4
  %2 = load i32, i32* @APIC_TRIGMOD_EDGE, align 4
  %3 = or i32 %1, %2
  %4 = load i32, i32* @APIC_LEVEL_ASSERT, align 4
  %5 = or i32 %3, %4
  %6 = load i32, i32* @APIC_DESTMODE_PHY, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @APIC_DELMODE_NMI, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @boot_cpu_id, align 4
  %11 = call i32 @lapic_ipi_raw(i32 %9, i32 %10)
  %12 = call i32 @lapic_ipi_wait(i32 -1)
  ret void
}

declare dso_local i32 @lapic_ipi_raw(i32, i32) #1

declare dso_local i32 @lapic_ipi_wait(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
